turtleart.circleten.CircleTen.scala.error
Compilation error:
CircleTen:2: error: illegal start of simple pattern
 for(<-1 to 10){
     ^CircleTen:5: error: '<-' expected but '}' found.
} 
^