turtleart.circleten.CircleTen.scala.code
override def run() {
 for(<-1 to 10){
   circle(i);
 }
}